# python-searchlightclient

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: Makefile  requirements.txt
doc/source/: conf.py  index.rst
doc/source/contribute/: index.rst
doc/source/man/: openstack.rst  search.rst
releasenotes/notes/: drop-py-2-7-5ef11499fe79e1ca.yaml
searchlightclient/: client.py  exc.py  i18n.py
searchlightclient/common/: base.py  exceptions.py  utils.py
searchlightclient/openstack/common/: _i18n.py  cliutils.py
searchlightclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
searchlightclient/osc/: plugin.py
searchlightclient/osc/v1/: facet.py  resource_type.py  search.py
searchlightclient/tests/unit/osc/: fakes.py  utils.py
searchlightclient/tests/unit/osc/v1/: fakes.py  test_facet.py  test_resource_type.py  test_search.py
searchlightclient/tests/unit/v1/: test_facets.py  test_resource_types.py  test_search.py
searchlightclient/v1/: client.py  facets.py  resource_types.py  search.py
tools/: install_venv.py
