[metadata]
name = python-searchlightclient
summary = OpenStack Indexing and Search API Client Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    searchlightclient

[entry_points]
openstack.cli.extension =
    search = searchlightclient.osc.plugin

openstack.search.v1 =
    search_resource-type_list = searchlightclient.osc.v1.resource_type:ListResourceType

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = python-searchlightclient/locale/python-searchlightclient.pot

[compile_catalog]
directory = python-searchlightclient/locale
domain = python-searchlightclient

[update_catalog]
domain = python-searchlightclient
output_dir = python-searchlightclient/locale
input_file = python-searchlightclient/locale/python-searchlightclient.pot
