[metadata]
name = python-searchlightclient
summary = OpenStack Indexing and Search API Client Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-searchlightclient/latest
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    searchlightclient

[entry_points]
openstack.cli.extension =
    search = searchlightclient.osc.plugin

openstack.search.v1 =
    search_resource_type_list = searchlightclient.osc.v1.resource_type:ListResourceType
    search_facet_list = searchlightclient.osc.v1.facet:ListFacet
    search_query = searchlightclient.osc.v1.search:SearchResource
